# IA

./: .gitignore
Adaline/: CMakeLists.txt  Install.md
Adaline/src/: main.cpp
LabirintoComSalas/: CMakeLists.txt  Install.md  test.sh  testes.txt
LabirintoComSalas/src/: main.cpp  room.json
Perceptron/: CMakeLists.txt  Install.md  toolchain-mingw64.cmake
Perceptron/src/: main.cpp
PerceptronMultiLayer/: CMakeLists.txt  Install.md
PerceptronMultiLayer/src/: main.cpp
Problema dos Baldes/: CMakeLists.txt  Install.md
Problema dos Baldes/src/: main.cpp
Problema8Rainhas/: CMakeLists.txt  Install.md
Problema8Rainhas/src/: main.cpp
ProblemaDosBaldes/: CMakeLists.txt  Install.md
modelo1/: CMakeLists.txt  Install.md
modelo1/src/: main.cpp  modelo.cpp  modelo.hpp
torneio_caixeiro_viajante/: CMakeLists.txt  Install.md
torneio_caixeiro_viajante/src/: Readme.md  main.cpp
